# FlexRaySSScheduler

./: README.md
BenchmarkGenerator/: CMakeLists.txt  GDS.h  Generator.cpp  Generator.h  Utility.cpp  Utility.h
BenchmarkGenerator/Scripts/: VisualizeResults.sh  generateAndRunAllTests.sh  generateApproachesTestInstances.py  generateIncrementalTableInstances.py  generateIncrementalTestInstances.py  generateMVIncrementalTestInstances.py  generateMVTestInstances.py  generate_modified_instances.py  get_max_slots.py  make_Incremental_plot.py  make_MV_Approaches_plot.py  make_MV_plot.py  make_MV_vs_Incremental_plot.py  make_Modified_plot.py  process_IncrementalTables.py  vis_Approaches.sh  vis_Increm.sh  vis_MV.sh  vis_MV_Increm.sh
Instances/IncrementalPaperInstances/Configuration_files/: SAE_1.txt  SAE_2.txt  SAE_3.txt  SAE_4.txt  SAE_5.txt  SAE_6.txt  SAE_7.txt  Synth.txt
Instances/IncrementalPaperInstances/HW_Verification/: fray_basic_demo_rpp.h  fray_basic_demo_rpp0.c  fray_basic_demo_rpp1.c  fray_basic_demo_rpp2.c  fray_basic_demo_rpp3.c  fray_basic_demo_rpp4.c  fray_basic_demo_rpp5.c  increm_paper_hw_verification.txt  increm_paper_hw_verification_schedule.txt
MVFRScheduler/: Analysis.cpp  Analysis.h  BPosition.h  BestFitColorScheduler.cpp  BestFitColorScheduler.h  Buffer.h  CFrame.h  CMakeLists.txt  ChannelAssigner.cpp  ChannelAssigner.h  ChannelFaultScheduler.cpp  ChannelFaultScheduler.h  ChannelGeneticAssigner.cpp  ChannelGeneticAssigner.h  ChannelScheduler.cpp  ChannelScheduler.h  ChannelSchedulerResult.cpp  ChannelSchedulerResult.h  ChannelSchedulerTests.cpp  ChannelSchedulerTests.h  Chromosome.h  ConfigExporter.cpp  ConfigExporter.h  DataStructure.cpp  DataStructure.h  ExporterParameters.h  ExporterStructure.cpp  ExporterStructure.h  FFCIncrementalScheduler.cpp  FFCIncrementalScheduler.h  FibexExporter.cpp  FibexExporter.h  FirstFitColorScheduler.cpp  FirstFitColorScheduler.h  FirstFitParameters.h  FirstFitScheduler.cpp  FirstFitScheduler.h  FirstFitVariantScheduler.cpp  FirstFitVariantScheduler.h  Frame.h  (+43 more)
MVFRScheduler/Scripts/: generateInstances.py  runTest.sh  runTests.py  runTestsFT.py
MVFRScheduler/modules/: FindCPLEX.cmake  FindGUROBI.cmake  FindLibXML++.cmake  FindLpSolve.cmake
